--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     },
     "authors": [
         {
-            "name": "Surkov.K",
-            "email": "kskrua@gmail.com"
+            "name": "Nastya Lytvyn",
+            "email": "2858.allo.113@gmail.com"
         }
     ],
     "minimum-stability": "beta",
